Prevent SVGs from overflowing outside their container

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -712,6 +712,9 @@ table tr.even td{
 .toccontent h4{
 	font-size:110%;
 }
+.toccontent img{
+	max-width:100%;
+}
 
 .box{
 	border:2px dashed #4892b2;
